k8s/base/search-svc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: INGRESS_HOST  # Will be replaced by overlay (overflow-api.helios or overflow-api-staging.helios)
      http:
        paths:
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: search-svc
                port:
                  number: 8080
